--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,22 @@
       });
     }
   </script>
+  <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-storage.js"></script>
+  <script>
+    var firebaseConfig = {
+    apiKey: "AIzaSyCwlbAUk2Meca-o78hOjSyY-d17tJqA4f0",
+    authDomain: "notefynd-b3ae4.firebaseapp.com",
+    projectId: "notefynd-b3ae4",
+    storageBucket: "notefynd-b3ae4.appspot.com",
+    messagingSenderId: "594891032404",
+    appId: "1:594891032404:web:7af50f33605157e31c2ac1"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  </script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
