--- a/web/index.html
+++ b/web/index.html
@@ -42,12 +42,9 @@
   </script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-core.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-storage.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.4.456/pdf.min.js"></script>
-  <script type="text/javascript">
-     pdfjsLib.GlobalWorkerOptions.workerSrc = "//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.4.456/pdf.worker.min.js";
-  </script>
   <script>
     var firebaseConfig = {
     apiKey: "AIzaSyCwlbAUk2Meca-o78hOjSyY-d17tJqA4f0",
