--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,7 @@
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
   <base href="/">
+  <meta name="google-signin-client_id" content="594891032404-n49i98trl9halp0k7f8rr51klq561iod.apps.googleusercontent.com">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -45,6 +46,7 @@
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-core.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-storage.js"></script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script>
     var firebaseConfig = {
     apiKey: "AIzaSyCwlbAUk2Meca-o78hOjSyY-d17tJqA4f0",
