uploading to web

--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Notefynd is a platform by, for and of students where people can share and view notes and articles to learn better, and help others do the same!">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -25,7 +25,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/jpeg" href="icon.jpeg"/>
 
   <title>notefynd</title>
   <link rel="manifest" href="manifest.json">
@@ -43,7 +43,6 @@
   </script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-core.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-storage.js"></script>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
